# agent-browser

./: AGENTS.md  AUTOLOAD.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  SKILL.md  skill.json
examples/: login-flow.md  manual-challenge.md  open-and-snapshot.md  saby-fresh-sandbox.md  saby-resume-partial.md
reference/: actions.md  artifacts-and-downloads.md  auth-and-profiles.md  errors-and-recovery.md  manual-desktop-and-novnc.md  operating-model.md  saby-export.md  security.md
references/: upstream-SKILL.md
scripts/: browser_tool.py  bump_version.py  diagnostics_report.py  generate_changelog.py  saby_tenders.js
scripts/agent_browser_skill/: __init__.py  actions.py  actions_artifacts.py  actions_auth.py  actions_batch.py  actions_extractors.py  actions_generic.py  actions_maintenance.py  actions_manual.py  actions_saby.py  errors.py  extractors.py  legacy_impl.py  result.py  runner.py  version.py
scripts/agent_browser_skill/browser/: __init__.py  cdp.py  dashboard.py  desktop.py
snitchmd-master/: .dockerignore  CHANGELOG.md  Dockerfile  Justfile  LICENSE  README.md  install.sh  package.json  snitchmd.ts  tasks.md
snitchmd-master/assets/: demo.cast  snitchmd-flow.html
snitchmd-master/runtime/: package.json
snitchmd-master/scripts/: benchmark.py  bump-version  changelog-notes  snitchmd  update-skill-help
snitchmd-master/tools/extract_stdin/: Cargo.toml
snitchmd-master/tools/extract_stdin/src/: main.rs
tests/: test_empty_snapshot_guidance.py  test_extractors.py  test_page_markdown.py  test_tool_policy.py
tests/fixtures/golden/: cleanup.json  (+7 more)
(+43 files in other folders)
