[package]
name = "extract_stdin"
version = "0.1.0"
edition = "2021"

[dependencies]
rs-trafilatura = { git = "https://github.com/Murrough-Foley/rs-trafilatura", rev = "2a4f56eef84cca2d319d27c9108373d593110355" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
